NIHVIVO-852: Photo upload: vertical alignment problem with Cancel buttons has been fixed.

--- a/themes/vivo-basic/css/uploadImages.css
+++ b/themes/vivo-basic/css/uploadImages.css
@@ -3,7 +3,7 @@
 /* styles for uploading a picture */
 #photoUploadContainer{
 	margin-left: 0px;
-	width:500px;
+	width:720px;
 	height:280px;
 	background:#fff;
 	padding:15px;
@@ -31,6 +31,8 @@
 	padding-left:15px;
 	
 }
+
+
 
 #photoUploadForm form label{
 	display:block;
@@ -91,7 +93,7 @@
 
 #photoDeletingContainer{
 	margin-left: 0px;
-	width:500px;
+	width:720px;
 	height:330px;
 	background:#fff;
 	border:1px solid grey;
@@ -103,7 +105,6 @@
 	color:#900;
 	padding:0px;
 	margin-bottom:5px;
-	
 	height:30px;
 	
 }
@@ -113,15 +114,14 @@
 	float:left;
 	margin:0;
 	padding:0;
-	vertical-align:middle;
-	
-	
+	vertical-align:middle;	
 }
 
 #errorAlert  p{
 padding-left:35px;
 font-size:0.9em;
 line-height:30px;
+
 	
 }
 
@@ -140,6 +140,10 @@ background-color:#FF7700;
 
 a.cancelUpload:active {
 color:#FF7700;
+}
+.or{
+	display:inline;
+	vertical-align:middle;
 }
 
 
